--- a/org.css
+++ b/org.css
@@ -7,4 +7,8 @@
 body {
   margin: 1em;
   max-width: 80ch;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
