--- a/org.css
+++ b/org.css
@@ -5,12 +5,13 @@
 }
 
 body {
-  margin: 1em;
+  margin: auto;
+  padding-bottom: 1em;
   max-width: 80ch;
 }
 
 pre {
   font-family: 'IBM Plex Mono', monospace;
-  box-shadow: 0;
+  box-shadow: none;
 }
 
