--- a/org.css
+++ b/org.css
@@ -20,3 +20,26 @@ pre * {
   font-family: 'IBM Plex Mono', monospace;
 }
 
+div#postamble * {
+  color: #bfbfbf;
+}
+
+div#postamble *:hover {
+  color: revert;
+}
+
+a {
+  color: #20a030;
+}
+
+a:visited {
+  color: #20a090;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #303030;
+    color: #f0f0f0;
+  }
+}
+
