update: html bgcolour

--- a/org.css
+++ b/org.css
@@ -4,6 +4,10 @@
   font-family: 'IBM Plex Sans', sans-serif;
 }
 
+html {
+  background-color: #f7f9fb;
+}
+
 body {
   background-color: #f7f9fb;
   margin: auto;
@@ -37,6 +41,11 @@ a:visited {
 }
 
 @media (prefers-color-scheme: dark) {
+  
+  html {
+    background-color: #303030;
+  }
+  
   body {
     background-color: #303030;
     color: #f0f0f0;
